# lzmadiffpatch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lzdptest.py  lzma1900.diff
lzmadiff/: CMakeLists.txt  lzmadiff.c
lzmapatch/: CMakeLists.txt  lzmapatch.c
